# audiophile

./: CMakeLists.txt  README.md  audiophile.kdev4
.kdev4/: audiophile.kdev4
apps/: cg3preview.cpp  flappy_box.cpp
include/: factory_map.hpp  math.hpp
include/cg3preview/controller/: engine.hpp  renderbuffer_object_logic.hpp
include/cg3preview/model/: renderbuffer.hpp
include/cg3preview/view/: renderbuffer_al_audible.hpp  renderbuffer_gl_drawable.hpp
include/controller/: default_engine.hpp  default_logic.hpp  default_object_logic.hpp  engine.hpp  glut_engine.hpp  input_event_handler.hpp  logic.hpp
include/flappy_box/controller/: box_object_logic.hpp  flappy_engine.hpp  tube_object_logic.hpp
include/flappy_box/model/: box.hpp  tube.hpp
include/flappy_box/view/: box_al_audible.hpp  box_gl_drawable.hpp  tube_gl_drawable.hpp
include/glut_view/: default_drawable.hpp  default_renderer.hpp  drawable.hpp  renderer.hpp  window.hpp
include/model/: default_game_object.hpp  game.hpp  game_object.hpp  player.hpp
include/view/: al_renderer.hpp  camera.hpp  default_gl_drawable.hpp  default_gl_renderer.hpp  gl_drawable.hpp  gl_renderer.hpp  gl_shader_program.hpp  glut_window.hpp  projection.hpp
include/view/gl/: headers.hpp  shader.hpp  shader_program.hpp  utilities.hpp
include/view/gl/wrap/: gl_type.hpp  pixel_format.hpp
res/shaders/: blinn_phong.frag  blinn_phong.vert  texture_lookup.frag  texture_lookup.vert  wireframe.frag  wireframe.vert
src/: main.cpp  player.hpp~
src/cg3preview/controller/: engine.cpp  renderbuffer_object_logic.cpp
src/cg3preview/model/: renderbuffer.cpp
src/cg3preview/view/: renderbuffer_al_audible.cpp  renderbuffer_gl_drawable.cpp
src/controller/: default_engine.cpp  default_logic.cpp  default_object_logic.cpp  engine.cpp  glut_engine.cpp  logic.cpp
src/flappy_box/controller/: box_object_logic.cpp  flappy_engine.cpp  tube_object_logic.cpp
src/flappy_box/model/: box.cpp  tube.cpp
src/flappy_box/view/: box_al_audible.cpp  box_gl_drawable.cpp  box_simple_al_audible.cpp  tube_gl_drawable.cpp
src/glut_view/: default_drawable.cpp  default_renderer.cpp  renderer.cpp  window.cpp
src/model/: default_game_object.cpp  game.cpp  game_object.cpp  model.hpp~
src/view/: al_renderer.cpp  camera.cpp  default_gl_drawable.cpp  default_gl_renderer.cpp  gl_renderer.cpp  glut_window.cpp  projection.cpp
